- Auth can be enabled/disabled via flag - API URI configurable via flag - Use HTTP/1.1 to avoid GOAWAY frames, needs further investigation. - Include two base IDEA run configurations

--- a/src/main/resources/workflows/initialize_cart.json5
+++ b/src/main/resources/workflows/initialize_cart.json5
@@ -9,7 +9,7 @@
       "name": "http",
       "taskReferenceName": "http_ref",
       "inputParameters": {
-        "uri": "https://orkes-api-tester.orkesconductor.com/api",
+        "uri": "${workflow.input.uri}",
         "method": "GET",
         "accept": "application/json",
         "contentType": "application/json",
