--- a/src/main/resources/workflows/kiosk_handler.json5
+++ b/src/main/resources/workflows/kiosk_handler.json5
@@ -53,7 +53,7 @@
                 "taskReferenceName": "DummyApiCallFour",
                 "inputParameters": {
                   "uri": "${workflow.input.uri}",
-                  "method": "GET",
+                  "method": "${workflow.input.method}",
                   "accept": "application/json",
                   "contentType": "application/json",
                   "encode": true
@@ -78,7 +78,7 @@
                 "taskReferenceName": "DummyApiCallTwo",
                 "inputParameters": {
                   "uri": "${workflow.input.uri}",
-                  "method": "GET",
+                  "method": "${workflow.input.method}",
                   "accept": "application/json",
                   "contentType": "application/json",
                   "encode": true
@@ -101,7 +101,7 @@
                 "taskReferenceName": "DummyApiCallThree",
                 "inputParameters": {
                   "uri": "${workflow.input.uri}",
-                  "method": "GET",
+                  "method": "${workflow.input.method}",
                   "accept": "application/json",
                   "contentType": "application/json",
                   "encode": true
@@ -126,7 +126,7 @@
                 "taskReferenceName": "DummyApiCallOne",
                 "inputParameters": {
                   "uri": "${workflow.input.uri}",
-                  "method": "GET",
+                  "method": "${workflow.input.method}",
                   "accept": "application/json",
                   "contentType": "application/json",
                   "encode": true
@@ -205,7 +205,10 @@
       "permissive": false
     }
   ],
-  "inputParameters": [],
+  "inputParameters": [
+    "uri",
+    "method"
+  ],
   "outputParameters": {},
   "failureWorkflow": "",
   "schemaVersion": 2,
